--- a/Unidad 3/Clase 13/banco/src/main/java/cl/duoc/banco/Banco.form
+++ b/Unidad 3/Clase 13/banco/src/main/java/cl/duoc/banco/Banco.form
@@ -21,6 +21,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Deposito"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
